# Master-Degree-Research

./: .pre-commit-config.yaml  Makefile  README.md  executar_fila.sh  executar_fila_preds.sh  pyproject.toml
Apolar-Molecules/: README.md  pyproject.toml
Apolar-Molecules/notebooks/: 14_moléculas.ipynb  teste.py
Apolar-Molecules/src/: __init__.py  process.py  train_model.py  visualization.py
Apolar-Molecules/tests/: __init__.py  test_process.py
Positron-Binding-Energy/: .pre-commit-config.yaml  Makefile  README.md  executar_fila.sh  pyproject.toml
config/: main.yaml
general/: save_performances_img.py
notebooks/: chaotic_nb.ipynb  exporting_df_to_xlsx.ipynb  preliminar_test.ipynb  preprocess_data_2024.ipynb  understand_null_FI.ipynb  understand_null_FI.py
src/: __init__.py  creating_data.py  save_performances_img.py
src_apolar/: eval_apolar_models.py  feature_importance_apolar.py  get_opt_models_apolar.py  get_test_preds.py  get_test_preds_apolar.py
src_polar/: eval_polar_models.py  feature_importance_polar.py  get_opt_models_polar.py  get_test_preds_polar.py
src_polar_apolar/: eval_polar_apolar_models.py  feature_importance_polar_apolar.py  get_opt_models_polar_apolar.py  get_test_preds_polar_apolar.py
txt_outputs/: eval_apolar_models_output.txt  eval_polar_apolar_models_output.txt  executar_fila_output.txt  executar_fila_preds_output.txt  get_opt_models_apolar_output.txt  get_opt_models_polar_apolar_output.txt  get_opt_models_polar_output.txt  get_test_preds_apolar_output.txt  get_test_preds_polar_apolar_output.txt  get_test_preds_polar_output.txt
(+346 files in other folders)
